test/pos/adt.msmt_
; Sorts
(declare-sort Vec 1)

; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((l2 (Vec Int))(l1 (Vec Int))(ys (Vec Int))(xs (Vec Int))(y Int)(x Int)) (=> (and (= xs mkNil) (and (= l1 (mkCons x xs)) (and (= l2 (mkCons y ys)) (= l1 l2)))) (= x y))))
(constraint (forall ((l2 (Vec Int))(l1 (Vec Int))(ys (Vec Int))(xs (Vec Int))(y Int)(x Int)) (=> (and (= xs mkNil) (and (= l1 (mkCons x xs)) (and (= l2 (mkCons y ys)) (= l1 l2)))) (= xs ys))))
(constraint (forall ((l3 (Vec Int))(l1 (Vec Int))(xs (Vec Int))(x Int)) (=> (and (= xs mkNil) (and (= l1 (mkCons x xs)) (= l1 l3))) (is$mkCons l3))))
(constraint (forall ((l3 (Vec Int))(l1 (Vec Int))(xs (Vec Int))(x Int)) (=> (and (= xs mkNil) (and (= l1 (mkCons x xs)) (= l1 l3))) (= x (head l3)))))
(constraint (forall ((l3 (Vec Int))(l1 (Vec Int))(xs (Vec Int))(x Int)) (=> (and (= xs mkNil) (and (= l1 (mkCons x xs)) (= l1 l3))) (= mkNil (tail l3)))))

