test/neg/adt0.msmt_
; Sorts
(declare-sort Vec 1)

; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints


;  Constraints
(constraint (forall ((l2 (Vec Int))(l1 (Vec Int))(ys (Vec Int))(xs (Vec Int))(y Int)(x Int)) (=> (and (= l1 (mkCons x xs)) (= l2 (mkCons y ys))) (= x y))))

